fix: 🐛 slider styles spacing fixes mostly

--- a/src/scss/framework/components/card/_c--card-e.scss
+++ b/src/scss/framework/components/card/_c--card-e.scss
@@ -62,6 +62,7 @@
     &--second & {
         &__title {
             @extend .f--font-h;
+            margin-bottom: $measure;
         }
         &__subtitle {
             @extend .f--font-i;
